--- a/index.html
+++ b/index.html
@@ -26,32 +26,22 @@
 
 
     <div class="parent_main">
-
         <div class="child_main">
-            <button id="button_new_game" onclick="ocultarBoton()"> New Game </button>
-            <canvas class="canvas"></canvas>
-            <div id="letras"></div>
-            <div id="input"></div>
-            <div id="opciones"></div>
+            <button id="boton_juego_nuevo" onclick="ocultarBoton()"> New Game </button>
+            <canvas id="canvas"></canvas>
+            <div id="contenerdor-letras"></div>
+            <div id="input_usuario"></div>
             <div id="timer"></div>
-            <div id="tries"></div>
-            
+            <div id="opciones_juegos"></div>
+            <div id="resultado_final"></div>
         </div>
-
         <div class="nav_main">
-
             <div class="user">
-
                 <div id="name"></div>
                 <div id="time"></div>
-
             </div>
-
         </div>
-
     </div>
-
-
     <br>
     <script src="script.js"></script>
 </body>
