--- a/index.html
+++ b/index.html
@@ -27,9 +27,49 @@
 
     <div class="parent_main">
         <div class="child_main">
-            <button id="boton_juego_nuevo" onclick="ocultarBoton()"> New Game </button>
             <canvas id="canvas"></canvas>
-            <div id="contenerdor-letras"></div>
+
+            <div>
+                <p id="palabra_secreta">
+                    <span>A</span> <span>B</span> <span>C</span>
+                </p>
+
+                <button id="boton_juego_nuevo" onclick="ocultarBoton()"> New Game </button>
+
+            </div>
+
+            <div id="botones_letras">
+
+                <button>A</button>
+                <button>B</button>
+                <button>C</button>
+                <button>D</button>
+                <button>E</button>
+                <button>F</button>
+                <button>G</button>
+                <button>H</button>
+                <button>I</button>
+                <button>J</button>
+                <button>K</button>
+                <button>L</button>
+                <button>M</button>
+                <button>N</button>
+                <button>Ñ</button>
+                <button>O</button>
+                <button>P</button>
+                <button>Q</button>
+                <button>R</button>
+                <button>S</button>
+                <button>T</button>
+                <button>U</button>
+                <button>V</button>
+                <button>W</button>
+                <button>X</button>
+                <button>Y</button>
+                <button>Z</button>
+
+            </div>
+            <!--<div id="contenerdor-letras"></div>
             <div id="input_usuario"></div>
             <div id="timer"></div>
             <div id="opciones_juegos"></div>
@@ -39,7 +79,7 @@
             <div class="user">
                 <div id="name"></div>
                 <div id="time"></div>
-            </div>
+            </div>-->
         </div>
     </div>
     <br>
