Retoques al ahorcado y fondo animado

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
             </div>
         </div>
         </div>
+    
+        <div class="fondo"></div>
+        <div class="fondo2"></div>
+        <div class="fondo3"></div>
     <br>
     <script src="script.js"></script>
 </body>
