--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2> 0/10</h2>
             </div>
             <div id="record_actual">
-                <h2> 0000</h2>
+                <h2> </h2>
         </div>
         
         </div>
@@ -87,6 +87,11 @@
                 <div id="name"></div>
                 <div id="time"></div>
             </div>
+            <ul id="lista_usuarios">
+                <li>Usuario1</li>
+                <li>Usuario2</li>
+                <li>Usuario3</li>
+            </ul>
         </div>
         </div>
     
